# northbridge-relay-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/northbridge/: relay.hpp
src/: relay.cpp  socket_util.cpp  socket_util.hpp  wire.cpp  wire.hpp
tools/: relay_core_host.cpp  relay_edge_host.cpp
